--- a/site/style.scss
+++ b/site/style.scss
@@ -13,7 +13,7 @@ html {
 
 .main {
   margin: 0 auto;
-  max-width: 1220px;
+  max-width: 1228px;
 }
 
 button,
@@ -26,11 +26,17 @@ textarea {
   margin: 0;
 }
 
+.pokegrid-wrapper {
+    padding: 8px;
+}
 .pokegrid {
   display: grid;
   //grid-gap: 2rem 0.75rem;
-  grid-gap: 0.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+//   grid-gap: 0.5rem;
+  grid-gap: 8px;
+//   grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+
 }
 
 .pokemon {
@@ -38,6 +44,7 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 10px;
 
   .name {
     font-family: "Nunito Sans", $fontstack;
@@ -66,11 +73,31 @@ textarea {
   }
 }
 
+.pokegrid.filtered {
+    // width: 600px;
+    // height: 600px;
+    .no {
+        // display: none;
+    }
+    .pokemon {
+        background-color: #f2f2f2;
+    }
+    .pokemon:not(.named) {
+        display: none;
+    }
+    input.nickname {
+        width: 100%;
+        color: #404040;
+        font-weight: 700;
+    }
+}
+
 .pokemon-image {
   img {
     max-width: 100%;
     width: 128px;
     height: 128px;
+    margin-top: -10px;
   }
 }
 
@@ -78,3 +105,43 @@ textarea {
   display: none;
   pointer-events: none;
 }
+
+.floating-ui {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+
+    .btn {
+        background: #333;
+        color: #fff;
+        border: 0;
+        padding: 1rem;
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        margin-left: 5px;
+
+        &:hover {
+            background: #333;
+        }
+    }
+}
+
+.exporter {
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 99999998;
+    width: 100%;
+    height: 100%;
+
+    canvas {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        z-index: 99999999;
+        transition: transform 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s, opacity 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s, -webkit-transform 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s;
+    }
+}
+
