--- a/site/style.scss
+++ b/site/style.scss
@@ -101,10 +101,7 @@ grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
   }
 }
 
-.hidden {
-  display: none;
-  pointer-events: none;
-}
+
 
 .floating-ui {
     position: fixed;
@@ -136,12 +133,27 @@ grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
     width: 100%;
     height: 100%;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    #btn_exporter_close {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        cursor: pointer;
+    }
+
     canvas {
-        position: fixed;
-        top: 0px;
-        left: 0px;
+        // position: fixed;
+        // top: 0px;
+        // left: 0px;
         z-index: 99999999;
         transition: transform 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s, opacity 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s, -webkit-transform 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s;
     }
 }
 
+.hidden {
+    display: none;
+    pointer-events: none;
+  }
