--- a/site/style.scss
+++ b/site/style.scss
@@ -108,21 +108,21 @@ grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
     bottom: 20px;
     right: 20px;
     display: flex;
-
     font-family: "Nunito Sans", $fontstack;
+}
 
-    .btn {
+.btn {
+    font-family: "Nunito Sans", $fontstack;
+    background: #333;
+    color: #fff;
+    border: 0;
+    padding: 1rem;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    margin-left: 5px;
+
+    &:hover {
         background: #333;
-        color: #fff;
-        border: 0;
-        padding: 1rem;
-        cursor: pointer;
-        transition: all 0.2s ease-in-out;
-        margin-left: 5px;
-
-        &:hover {
-            background: #333;
-        }
     }
 }
 
@@ -150,8 +150,16 @@ grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
         // position: fixed;
         // top: 0px;
         // left: 0px;
+        max-width: 95%;
         z-index: 99999999;
         transition: transform 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s, opacity 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s, -webkit-transform 0.3s cubic-bezier(0.42, 0, 0.58, 1) 0s;
+    }
+
+    #btn_save {
+        position: absolute;
+        bottom: 40px;
+        background: #ffcce0;
+        color: black;
     }
 }
 
